--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -65,6 +65,16 @@
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "di6ycvwqv4");
     </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 50,
+        delay: 0,
+        duration: 800,
+        easing: 'ease-out-cubic',
+        once: true
+      });
+    </script>
     <style>
     body {
       background-color: #0a0a0a;
