--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block head_title %}Signup{% endblock %} {% block
-head %}
+{% extends "base.html" %} {% block head_title %}Signup{% endblock %} 
+{% block head %}
 <style>
   .errorlist {
     color: red;
