--- a/templates/account/email/base_message.html
+++ b/templates/account/email/base_message.html
@@ -353,9 +353,8 @@
                                         "
                                       >
                                         <span style="color: #08b74f"
-                                          >{% block content %}{% endblock
-                                          %}</span
-                                        >
+                                          >{% block content %}{% endblock %}
+                                        </span>
                                         <span>
                                           <h3
                                             style="
